# Death-The-Game

./: .editorconfig  .gitattributes  .gitignore  PROGRESS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/: README.md  build.gradle.kts
android/src/main/: AndroidManifest.xml
assets/death/: README.md
assets/death/audio/music/: README.md
assets/death/audio/sfx/: README.md
assets/death/data/: asset_catalog.json
assets/death/dialogues/: README.md
assets/death/fonts/: README.md
assets/death/locales/: README.md
assets/death/models/: README.md
assets/death/shaders/: README.md
assets/death/shaders/cube/: cube.frag.glsl  cube.vert.glsl
assets/death/shaders/triangle/: triangle.frag.glsl  triangle.vert.glsl
assets/death/textures/: README.md
assets/death/ui/: README.md
assets/death/world/: README.md
core/: build.gradle.kts
core/src/main/java/WeTTeA/api/: package-info.java
core/src/main/java/WeTTeA/content/: package-info.java
core/src/main/java/WeTTeA/core/: CoreBootstrap.java  CoreInfo.java  SystemNanoTime.java  Time.java  package-info.java
core/src/main/java/WeTTeA/gameplay/: package-info.java
desktop/: build.gradle.kts
docs/: ARCHITECTURE.md  BUILD.md  CODING.md  INPUT.md  NATIVE_BRIDGE.md  RENDER.md
gradle/: libs.versions.toml
ios/: README.md  build.gradle.kts
rust-bridge/: build.gradle.kts
rust-core/: Cargo.toml  README.md
rust-core/src/: jni_exports.rs  lib.rs
rust-core/src/ecs/: mod.rs
rust-core/src/pathfinding/: mod.rs
rust-core/src/physics/: mod.rs
rust-core/src/scripting/: mod.rs
(+135 files in other folders)
